Updated travis-ci config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: csharp
 solution: WCS.sln
 mono:
   - latest
+before_install:
+  - sudo apt-get install libasound2-data
+  - sudo apt-get install libc6
+  - sudo apt-get install libasound2
+  - sudo apt-get install libasound2-dev
 install:
   - curl -sSL https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.sh | DNX_BRANCH=dev sh && source ~/.dnx/dnvm/dnvm.sh
   - dnvm upgrade
